# Aegis-LLM

./: .gitignore  DESIGN.md  README.md  SECURITY.md  audit.db  pyproject.toml
aegis/: __init__.py  cli.py  doctor.py  run_env.py  serve.py  simulate.py
app/: config.py  main.py  policy.py  policy.py.orig  policy.py.rej
app/audit/: chain.py  db.py  models.py
app/auth/: api_keys.py  deps.py
app/firewall/: tools.py
app/guards/: dlp.py  injection.py  semantic_injection.py
app/incident/: state.py
app/providers/: azure_openai.py
app/ratelimit/: limiter.py
docs/: ARCHITECTURE.md  GUARDS.md  POLICY.md  RUNBOOK.md  THREAT_MODEL.md  index.md
examples/: demo_client.py
policies/: default.yaml
tests/: conftest.py  test_auth.py  test_chain.py  test_doctor.py  test_guards.py  test_incident.py  test_policy.py  test_run.py  test_semantic.py  test_serve.py  test_simulate.py
