[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-sec-gateway"
version = "0.2.0"
description = "Security-First AI Control Plane / Zero-Trust Gateway for agentic systems"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "typer>=0.9.0",
]

[project.scripts]
aegis = "aegis.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app", "aegis"]
